--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>baya_grid</title>
 </head>
 <body>
+    <div id="loader">
+        <h1>Veuillez patientez pendant le chargement de la page.</h1>
+        </div>
+
     <container id="container">
         <div id="left">
         <div id="row-sujet">
