--- a/index.html
+++ b/index.html
@@ -12,37 +12,31 @@
         </div>
 
     <container id="container">
-        <div id="left">
-        <div id="row-sujet">
-            <h2 class="title">SUJET</h2>
-            <img src="aiku/color/formes_color-orange (1).png" class="btn" id="btnA" height="100px" width="100px"></img>
-            <img src="aiku/color/formes_color-orange (2).png" class="btn" id="btnB" height="100px" width="100px"></img>
-            <img src="aiku/color/formes_color-orange (3).png" class="btn" id="btnC" height="100px" width="100px"></img>
-            <img src="aiku/color/formes_color-orange (4).png" class="btn" id="btnD" height="100px" width="100px"></img>
-
+    <div id="left">
+        <div id="left-left">
+            <h1>SUJET</h1>
+            <h1>ACTION</h1>
+            <h1>COMPLEMENT</h1>
+            <h1>ADJECTIF</h1>
         </div>
-        
-        <div id="row-action">
-            <h2 class="title">ACTION</h2>
-            <img src="aiku/color/formes_color-rose (1).png" class="btn" id="btnW" height="100px" width="100px"></img>
-            <img src="aiku/color/formes_color-rose (2).png" class="btn" id="btnX" height="100px" width="100px"></img>
-            <img src="aiku/color/formes_color-rose (3).png" class="btn" id="btnY" height="100px" width="100px"></img>
-            <img src="aiku/color/formes_color-rose (4).png" class="btn" id="btnZ" height="100px" width="100px"></img>
-        </div>
-        <div id="row-comp">
-            <h2 class="title">COMPLÉMENT</h2>
-            <img src="aiku/color/formes_color-pomme (2).png" class="btn" id="btn1" height="100px" width="100px"></img>
-            <img src="aiku/color/formes_color-pomme (1).png" class="btn" id="btn2" height="100px" width="100px"></img>
-            <img src="aiku/color/formes_color-pomme (4).png" class="btn" id="btn3" height="100px" width="100px"></img>
-            <img src="aiku/color/formes_color-pomme (3).png" class="btn" id="btn4" height="100px" width="100px"></img>
-        </div>
-        <div id="row-adj">
-            <h2 class="title">ADJECTIF</h2>
-            <img src="aiku/color/formes_color-vert (2).png" class="btn" id="btn6" height="100px" width="100px"></img>
-            <img src="aiku/color/formes_color-vert (1).png" class="btn" id="btn7" height="100px" width="100px"></img>
-            <img src="aiku/color/formes_color-vert (4).png" class="btn" id="btn8" height="100px" width="100px"></img>
-            <img src="aiku/color/formes_color-vert (3).png" class="btn" id="btn9" height="100px" width="100px"></img>
-        </div>
+        <div id="left-right">
+                <img src="aiku/color/formes_color-rose (1).png" class="btn" id="btnA" ></img>
+                <img src="aiku/color/formes_color-rose (2).png" class="btn" id="btnB" ></img>
+                <img src="aiku/color/formes_color-rose (3).png" class="btn" id="btnC" ></img>
+                <img src="aiku/color/formes_color-rose (4).png" class="btn" id="btnD" ></img>
+                <img src="aiku/color/formes_color-orange (2).png" class="btn" id="btnW"></img>
+                <img src="aiku/color/formes_color-orange (3).png" class="btn" id="btnX"></img>
+                <img src="aiku/color/formes_color-orange (4).png" class="btn" id="btnY"></img>
+                <img src="aiku/color/formes_color-orange (1).png" class="btn" id="btnZ"></img>
+                <img src="aiku/color/formes_color-vert (4).png" class="btn" id="btn1"></img>
+                <img src="aiku/color/formes_color-vert (1).png" class="btn" id="btn2"></img>
+                <img src="aiku/color/formes_color-vert (2).png" class="btn" id="btn3"></img>
+                <img src="aiku/color/formes_color-vert (3).png" class="btn" id="btn4"></img>
+                <img src="aiku/color/formes_color-pomme (1).png" class="btn" id="btn6"></img>
+                <img src="aiku/color/formes_color-pomme (2).png" class="btn" id="btn7"></img>
+                <img src="aiku/color/formes_color-pomme (3).png" class="btn" id="btn8"></img>
+                <img src="aiku/color/formes_color-pomme (4).png" class="btn" id="btn9"></img>
+    </div>
     </div>
     <div id="right">
         <div id="row-phrase">
