--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
         </div>
 
         <div id="print">
+<div id="img-print">
 
+</div>
+<div id="printtxt">
+    <h1>AIKU</h1>
+</div>
         </div>
 
     <button id="btnDisplay">Print</button>
